--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
         "@testing-library/react": "^12.1.4",
         "@testing-library/user-event": "^13.5.0",
         "axios": "^0.26.1",
+        "firebase": "^9.6.11",
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
+        "react-firebase-hooks": "^5.0.3",
+        "react-redux": "^8.0.1",
         "react-router-dom": "^6.3.0",
         "react-scripts": "5.0.0",
         "react-transition-group": "^4.4.2",
+        "redux": "^4.2.0",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
