--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
         "react-firebase-hooks": "^5.0.3",
         "react-redux": "^8.0.1",
         "react-router-dom": "^6.3.0",
-        "react-scripts": "5.0.0",
+        "react-scripts": "^5.0.0",
         "react-transition-group": "^4.4.2",
+        "react-uuid": "^1.0.2",
         "redux": "^4.2.0",
         "web-vitals": "^2.1.4"
     },
